--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeTube</title>
+    <link rel="stylesheet" href="/style/landing-page.css"> 
 </head>
 <body>
     <section id="main">
@@ -18,10 +19,12 @@
     </section>
     <!-- Overlay prompts start -->
     <div class="prompt prompt--join">
+        <h1>Join a room</h1>
         <input type="text" name="prompt-join-input" class="prompt__input prompt__input--join"> 
         <button class="prompt__button prompt__button--join">Join</button>
     </div>
     <div class="prompt prompt--create">
+        <h1>Create a room</h1>
         <input type="text" name="prompt-create-input" class="prompt__input prompt__input--create"> 
         <button class="prompt__button prompt__button--create">Create</button>
     </div>
