--- a/src/client/style/reset.scss
+++ b/src/client/style/reset.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap");
+
 *,
 *::after,
 *::before {
@@ -6,7 +8,9 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
+    font-family: "Roboto", sans-serif;
     position: relative;
     height: 100%;
 }
